--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,47 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
+  box-sizing: border-box;
+  margin: 0;
 }
 
+.App {
+  line-height: 1.7;
+  font-size: 16px;
+  font-family: 'Open sans', sans-serif;
+  color: #7d7789;
+  font-weight: 400;
+  word-wrap: break-word;
+  height: 100vh;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+.innerBlock {
+  /* border: 1px solid rgb(216, 29, 185); */
+  display: flex;
+  padding: 0 8vh;
+  height: 84vh;
+}
+
+a{
+  text-decoration: none;
+  color: #7d7789;
+}
+
+@media (max-width: 1040px) {
+  .innerBlock {
+    padding: 0 0;
+    
+  }
+}
+
+@media (max-width: 1600px) {
+  .App {
+    font-size: 15px;
+  }
+}
