--- a/src/footer/Footer.module.css
+++ b/src/footer/Footer.module.css
@@ -1,31 +1,26 @@
 .footer{
-    min-height: 40vh;
+    /* border: 1px solid red; */
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    background-color: rgb(206, 225, 219);
-}
-
-.footerContainer{
-    flex-direction: column;
-    gap: 40px;
-}
-
-.title{
-    background-color: mistyrose;
+    height: 8vh;
+    padding: 0 8vh;
 }
 
 .social{
+    /* border: 1px solid; */
     display: flex;
-    border: 1px solid;
     justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
-    max-width: 280px;
-    gap: 10px;
+    gap: 20px;
 }
 
 .icon{
-    width: 50px;
-    height: 50px;
-    background-color: lightskyblue;
+    /* border: 1px solid; */
+    height: 20px;
+}
+
+.social img{
+    width: 20px;
 }
