--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "./common/styles/sass/variables.scss";
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -6,11 +8,15 @@
 .App {
   line-height: 1.7;
   font-size: 16px;
-  font-family: 'Open sans', sans-serif;
-  color: #7d7789;
+  font-family: "Open sans", sans-serif;
+  color: $textColor;
   font-weight: 400;
   word-wrap: break-word;
   height: 100vh;
+
+  @media (max-width: 1600px) {
+    font-size: 15px;
+  }
 }
 
 ul {
@@ -26,22 +32,13 @@ li {
   display: flex;
   padding: 0 8vh;
   height: 84vh;
-}
 
-a{
-  text-decoration: none;
-  color: #7d7789;
-}
-
-@media (max-width: 1040px) {
-  .innerBlock {
+  @media (max-width: 1040px) {
     padding: 0 0;
-    
   }
 }
 
-@media (max-width: 1600px) {
-  .App {
-    font-size: 15px;
-  }
+a {
+  text-decoration: none;
+  color: $textColor;
 }
